Bugfix: don't auto-center-align the h1 tag on print

--- a/sites/all/themes/mcneese/css/print/print-text.css
+++ b/sites/all/themes/mcneese/css/print/print-text.css
@@ -1,7 +1,6 @@
 .mcneese h1 {
   font-size: 1.9em;
   line-height: 1.16em;
-  text-align: center;
 
   margin: 4px 0px;
 
